updated spacing issues, pie image, and added flex-start to show first auction card

--- a/components/auctions/auctionCard.module.css
+++ b/components/auctions/auctionCard.module.css
@@ -1,5 +1,5 @@
 .cardContainer {
-    margin: 0 10px;
+    margin: 0 20px;
     padding: 10px;
     color: var(--off-white);
     border: 1px solid var(--dark-grey);
