--- a/components/auctions/auctions.module.css
+++ b/components/auctions/auctions.module.css
@@ -1,9 +1,9 @@
 .auctionsContainer {
-    margin: 50px 0;
-    padding: 50px;
+    margin: 40px 0;
+    padding: 30px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     overflow-x: scroll;
     scroll-behavior: smooth;
@@ -23,7 +23,7 @@
 }
 
 .headingContainer {
-    margin: 90px 0;
+    margin: 60px 0 0 0;
     text-align: center;
 }
 
@@ -35,7 +35,7 @@
 
 .ctaContainer {
     width: 130px;
-    margin: 0 auto 50px;
+    margin: 20px auto 20px;
     padding: 8px;
     border-radius: 5px;
     display: flex;
