--- a/components/featuresInfo/featuresInfo.module.css
+++ b/components/featuresInfo/featuresInfo.module.css
@@ -1,6 +1,6 @@
 .featuresInfoContainer {
-    margin: 120px auto;
-    padding: 10px 60px;
+    margin: 60px auto;
+    padding: 50px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -87,7 +87,7 @@
 
 @media screen and (max-width: 760px) {
     .featuresInfoContainer {
-        margin: 120px auto;
+        margin: 100px auto 40px;
         padding: 10px 60px;
         display: flex;
         flex-direction: column;
@@ -112,7 +112,7 @@
     }
 
     .featuresImage {
-        width: 80%;
+        width: 100%;
         height: 60%;
     }
 
@@ -137,8 +137,8 @@
 
 @media screen and (min-width: 768px) and (max-width: 912px) {
     .featuresInfoContainer {
-        margin: 120px auto;
-        padding: 10px 60px;
+        margin: 100px auto;
+        padding: 10px 20px;
         display: flex;
         flex-direction: column;
         justify-content: center;
